# substrate-Practice

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/common/: Cargo.toml
pallets/kitties/common/src/: lib.rs
pallets/kitties/rpc/: Cargo.toml  README.md
pallets/kitties/rpc/runtime-api/: Cargo.toml
pallets/kitties/rpc/runtime-api/src/: lib.rs
pallets/kitties/rpc/src/: lib.rs
pallets/kitties/src/: lib.rs  rpc.rs  tests.rs  types.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
