[package]
name = "pallet-kitties-rpc"
version = "3.0.0"
authors = ["buncsj"]
edition = "2018"
description = "RPC interface for the kitties pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = '15.1.0'
jsonrpc-core-client = "15.0.1"
jsonrpc-derive = "15.0.1"

sp-api = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
sp-blockchain = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
sp-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
sp-runtime = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
pallet-kitties-rpc-runtime-api = { version = "3.0.0", path = "./runtime-api" }
# pallet-kitties-primitives = {version = "3.0.0", path = "../common"}
pallet-kitties = {version = "3.0.0", path = "../"}

[dev-dependencies]
serde_json = "1"