[package]
name = "pallet-kitties-rpc-runtime-api"
version = "3.0.0"
authors = ["buncsj"]
edition = "2018"
description = "RPC runtime API for Kitties FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07"}
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
sp-std = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag= "monthly-2021-07" }
# pallet-kitties-primitives = { version = "3.0.0", default-features = false, path = "../../common" }
pallet-kitties = { version = "3.0.0", default-features = false, path = "../../" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	# "pallet-kitties-primitives/std",
	"pallet-kitties/std",
	"sp-std/std",
]